# case-study-game-dev

./: .gitignore  .mcp.json  404.html  CLAUDE.md  README.md  codecov.yml  gulpfile.js  index.html  local.properties  mkdocs.yml  package-lock.json  package.json  pyproject.toml  replay.md  vercel.json
.claude/commands/: document-all.md  document-all.yaml
.github/workflows/: ci.yml  deploy.yml  e2e.yml  mkdocs.yml
app/: .c8rc.json  .dependency-cruiser.cjs  .gitignore  .prettierignore  .prettierrc  README.md  c8.config.json  coverage-report.json  dependency-report.html  eslint.config.js  gulpfile.js  index.html  package-lock.json  package.json  playwright.config.ts  prettier.config.js  puyo.js  style.css  test-results.json  tsconfig.app.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
app/clojure/: .cljfmt.edn  .gitignore  README.md  deps.edn  gulpfile.js  package.json  shadow-cljs.edn  test_manual.cljs
app/clojure-2/: .cljfmt.edn  .gitignore  README.md  deps.edn  gulpfile.js  package-lock.json  shadow-cljs.edn
app/clojure-3/: .cljfmt.edn  .gitignore  README.md  deps.edn  gulpfile.js  package.json
app/csharp/: .gitignore  README.md  UNITY_SETUP.md  build.cake  unity-config.sh
app/dev-dist/: sw.js  workbox-b004d73f.js
app/e2e/: ai-autoplay.spec.ts  example.spec.ts  puyo-game-stable.spec.ts
app/elm/: README.md  elm.json  package-lock.json  package.json
app/elm-2/: .gitignore  README.md  elm.json  package-lock.json  package.json
app/fsharp/: FSharpProjects.sln
app/go/: .gitignore  .golangci.yml  README.md  go.mod  (+2 more)
app/python/: .coverage  .ruff.toml  README.md  main.py  pyproject.toml  tox.ini
app/python/lib/: config.py  game.py  hello_pyxel.py  player.py  puyoimage.py  score.py  stage.py
app/python/ml_tdd/: .gitignore  README.md  pyproject.toml  tox.ini
app/python/ml_tdd/examples/: predict_iris.py  train_iris.py
app/python/ml_tdd/notebook/: INTELLIJ_WORKAROUND.md  QUICK_START.md  README.md  iris_classification_tutorial.ipynb  matplotlibrc
app/python/ml_tdd/src/: __init__.py
app/python/ml_tdd/src/ml/: __init__.py  iris_classifier.py
app/python/ml_tdd/test/: __init__.py  test_basic.py  test_iris_classifier.py
app/python/test/: test_game.py  test_player.py  test_stage.py
docs/: index.md
journal/: 20250731.html
operation/: MkDocs_GitHub_Actions設定.html  index.html  セットアップ.html
script/: mkdocs.js
search/: search_index.json
template/: index.html
(+1824 files in other folders)
